tests/NormalTests/paczka1/small_fuzzy/50909915.err
Error in line 3: tYpPM S437 92,1
Error in line 9: yYo4 A280 72,3
Error in line 11: yYo4 S437 4,9
Error in line 10: S437 A639 50,4
